funcs.in: Linux man pages bugs are fixed

--- a/funcs.in
+++ b/funcs.in
@@ -817,7 +817,7 @@ stddef.h           | stdlib.h         | void *realloc (void *ptr, size_t size)  
 # DEFERRED semget
 # DEFERRED semop
 # DEFERRED send
-sys/types.h        | sys/sendfile.h   | ssize_t sendfile (int out_fd, int in_fd, off_t *offset, size_t count)                     | -1     | value | # h, m, docs: not in POSIX, info taken from Linux man-pages, splice and sendfile man pages have issues: bugzilla.kernel.org/show_bug.cgi?id=86001 , https://bugzilla.kernel.org/show_bug.cgi?id=90911
+sys/types.h        | sys/sendfile.h   | ssize_t sendfile (int out_fd, int in_fd, off_t *offset, size_t count)                     | -1     | value | # h, m, docs: not in POSIX, info taken from Linux man-pages, splice and sendfile man pages have issues: bugzilla.kernel.org/show_bug.cgi?id=86001 , https://bugzilla.kernel.org/show_bug.cgi?id=90911 (баги исправлены, но исправления пока могли не дойти до дистрибутивов)
 # DEFERRED sendmsg
 # DEFERRED sendto
 stdio.h            |                  | void setbuf (FILE *SH_RESTRICT stream, char *SH_RESTRICT buf)                             | custom | void  | custom # h, m, docs: sh_x_setbuf проверяет ошибки
@@ -889,7 +889,7 @@ signal.h           |                  | int sigfillset (sigset_t *set)          
 # DEFERRED sockatmark
                    | sys/socket.h     | int socket (int domain, int type, int protocol)                                           | -1     | value | # h
 # DEFERRED socketpair
-fcntl.h, sys/types.h |                | ssize_t splice (int fd_in, loff_t *off_in, int fd_out, loff_t *off_out, size_t len, unsigned int flags) | -1 | value | # h, m, docs: not in POSIX, info taken from Linux man-pages, splice and sendfile man pages have issues: bugzilla.kernel.org/show_bug.cgi?id=86001 , https://bugzilla.kernel.org/show_bug.cgi?id=90911
+fcntl.h, sys/types.h |                | ssize_t splice (int fd_in, loff_t *off_in, int fd_out, loff_t *off_out, size_t len, unsigned int flags) | -1 | value | # h, m, docs: not in POSIX, info taken from Linux man-pages, splice and sendfile man pages have issues: bugzilla.kernel.org/show_bug.cgi?id=86001 , https://bugzilla.kernel.org/show_bug.cgi?id=90911 (баги исправлены, но исправления пока могли не дойти до дистрибутивов)
 # FLOAT sqrt, sqrtf, sqrtl
 # VAR stderr, stdin, stdout
 # DEFERRED strcasecmp, strcasecmp_l, strncasecmp, strncasecmp_l
