--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set (CMAKE_REQUIRED_LIBRARIES -lcurl)
 
 # _POSIX_C_SOURCE, because I want to get all POSIX functions
 # _GNU_SOURCE, т. к. я хочу получить splice и другие функции
-set (CMAKE_REQUIRED_DEFINITIONS "-D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE=1")
+set (CMAKE_REQUIRED_DEFINITIONS "-D_POSIX_C_SOURCE=200809L" "-D_GNU_SOURCE=1")
 
 check_symbol_exists (sigsetjmp "setjmp.h" SH_HAVE_sigsetjmp)
 
